# hpc-basics

./: .gitignore  README.md
L4/: CMakeLists.txt  README.md  hello.cpp
L6-7/: CMakeLists.txt  README.md  trapezoidal_v1.cpp  trapezoidal_v2.cpp  trapezoidal_v3.cpp
L8/: CMakeLists.txt  README.md  estimate_pi.cpp
